--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,7 +30,7 @@
                     android:id="@+id/iv_avatar"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@android:drawable/ic_menu_myplaces"
+                    android:src="@android:drawable/ic_menu_view"
                     android:layout_marginBottom="12dp" />
 
                 <TextView
