--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_chat"
-        android:icon="@android:drawable/ic_dialog_email"
+        android:icon="@drawable/ic_tab_chat"
         android:title="@string/chat_tab" />
-    
+
     <item
         android:id="@+id/nav_history"
-        android:icon="@android:drawable/ic_menu_recent_history"
+        android:icon="@drawable/ic_tab_history"
         android:title="@string/history_tab" />
-    
+
     <item
         android:id="@+id/nav_profile"
-        android:icon="@android:drawable/ic_menu_myplaces"
+        android:icon="@drawable/ic_tab_profile"
         android:title="@string/profile_tab" />
 </menu>
 
